upgrade LWJGL 3.3.3 -> 3.3.4, fix Java 25 Unsafe deprecation warnings
loving Java 25 so far :)